<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activity.EditMedicationActivity">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context="in.apnacare.android.medicationalertsystem.activity.EditMedicationActivity">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Medicine Name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <EditText
                            android:id="@+id/med_name"
                            android:inputType="textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="35dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_corner_edittext"
                            android:padding="2dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="1"
                                android:text="@string/med_dosage"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#12a7f7" />
                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/doseTxt"
                                android:inputType="number"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textColor="#12a7f7"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="1"
                                android:minHeight="35dp"
                                android:padding="2dp"
                                />


                            <Spinner
                                android:id="@+id/doseSpinner"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/rounded_corner_edittext"
                                android:entries="@array/dosageItems"
                                android:minHeight="35dp"
                                android:padding="2dp"></Spinner>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="1"
                                android:text="@string/med_qty"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#12a7f7" />

                            <Spinner
                                android:id="@+id/qtySpinner"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/rounded_corner_edittext"
                                android:entries="@array/quantityItems"
                                android:minHeight="35dp"
                                android:padding="2dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"></Spinner>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="0.59"
                                android:text="@string/min_qty"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#12a7f7"/>

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/minQty"
                                android:inputType="number"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textColor="#12a7f7"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="1"
                                android:minHeight="35dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="20dp"
                                android:padding="2dp"
                                />


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="0.59"
                                android:text="@string/max_qty"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#12a7f7"/>
                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/maxQty"
                                android:inputType="number"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textColor="#12a7f7"
                                android:layout_gravity="left|center_vertical"
                                android:layout_weight="1"
                                android:layout_marginEnd="20dp"
                                android:layout_marginStart="15dp"
                                android:minHeight="35dp"
                                android:padding="2dp"
                                />
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/pharma_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <Spinner
                            android:id="@+id/parmNameSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner_edittext"
                            android:inputType="textCapWords"
                            android:minHeight="35dp"
                            android:layout_marginRight="10dp"
                            android:padding="2dp">

                        </Spinner>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/doc_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <Spinner
                            android:id="@+id/docNameSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner_edittext"
                            android:inputType="textCapWords"
                            android:minHeight="35dp"
                            android:layout_marginRight="10dp"

                            android:padding="2dp" >

                        </Spinner>

                       <!-- <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/clinic_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <EditText
                            android:id="@+id/clinicName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner_edittext"
                            android:inputType="textCapWords"
                            android:minHeight="35dp"
                            android:layout_marginRight="10dp"
                            android:padding="2dp" />-->

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="20dp"
                            android:background="#CCC" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:gravity="left"
                                android:minWidth="120dp"
                                android:text="@string/morning"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/morningSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/morningTimes"
                                android:minWidth="120dp"
                                android:minHeight="35dp"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textAppearance="?android:attr/textAppearanceMedium">

                            </Spinner>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:gravity="left"
                                android:minWidth="120dp"
                                android:text="@string/afternoon"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/noonSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/noonTimes"
                                android:minWidth="120dp"
                                android:minHeight="35dp"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textAppearance="?android:attr/textAppearanceMedium">

                            </Spinner>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:minWidth="120dp"
                                android:text="@string/evening"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/eveningSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/evenTimes"
                                android:minWidth="120dp"
                                android:minHeight="35dp"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textAppearance="?android:attr/textAppearanceMedium">


                            </Spinner>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minWidth="120dp"
                                android:text="@string/night"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/nightSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/nightTimes"
                                android:minWidth="120dp"
                                android:minHeight="35dp"
                                android:background="@drawable/rounded_corner_edittext"
                                android:textAppearance="?android:attr/textAppearanceMedium">

                            </Spinner>
                        </LinearLayout>

                        <Button
                            android:id="@+id/editMed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/medUpdateButton"
                            android:textColor="#ffffff"
                            android:background="@drawable/mybutton"/>
                    </LinearLayout>

                </ScrollView>

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

        <!--<include layout="@layout/navigation_view"/>-->

</android.support.v4.widget.DrawerLayout>
