<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activity.CareTakerEditActivity">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="33dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </LinearLayout>
                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"

                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context="in.apnacare.android.medicationalertsystem.activity.AddMedication">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/family_member_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <EditText
                            android:id="@+id/ctName"
                            android:inputType="textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:minHeight="35dp"
                            android:padding="2dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_weight="0.05"
                                android:text="@string/family_member_relation"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#12a7f7" />

                            <Spinner
                                android:id="@+id/ctSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/border"
                                android:entries="@array/memberRelation"
                                android:minHeight="35dp"
                                android:padding="2dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"></Spinner>
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/family_member_email"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <EditText
                            android:id="@+id/ctEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:inputType="textCapWords"
                            android:minHeight="35dp"
                            android:padding="2dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/family_member_phone"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#12a7f7" />

                        <EditText
                            android:id="@+id/ctNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:inputType="number"
                            android:minHeight="35dp"
                            android:padding="2dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="20dp"
                            android:background="#CCC" />





                        <Button
                            android:id="@+id/ctUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:background="@drawable/mybutton"
                            android:text="Update Care Taker Details" />

                    </LinearLayout>

                </ScrollView>

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/navigation_view"/>

</android.support.v4.widget.DrawerLayout>